--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ humanize
 Markdown
 numpy
 opencv-contrib-python
+Pillow
 pipenv
 platformdirs
 psycopg2
@@ -22,3 +23,5 @@ pytz
 sqlparse
 typing_extensions
 tzdata
+
+virtualenv
